Enhance model comparison functionality and add embeddings support
- Updated Makefile to include new targets for TF-IDF and embeddings pipelines.
- Introduced new configuration files for embeddings and TF-IDF models.
- Implemented embeddings recommender and integrated it into the CLI for building indices and making recommendations.
- Added post-rule application logic to enhance recommendation scores based on defined rules.
- Created new Jupyter notebooks for model comparison and visualization of results.
- Updated evaluation scripts to accommodate changes in model configurations and metrics.
- Added scripts for running full model comparisons and saving results.

--- a/configs/tfidf.yaml
+++ b/configs/tfidf.yaml
@@ -1,14 +1,24 @@
 seed: 42
 k: 3
-model: tfidf              # switch to "embeddings" if you add it
+model: tfidf
+
+recommend:
+  k_pred: 2
+
 paths:
   controls: data/raw/controls.csv
   artifacts: data/raw/artifacts.csv
-  predictions_dir: outputs/predictions
+  predictions_dir: outputs/predictions/tfidf
   models_dir: models/tfidf
+  rules: configs/rules.yaml
+
 tfidf:
   ngram_range: [1, 2]
   min_df: 1
+
+rules:
+  enabled: false
+
 feedback:
   alpha: 0.03
   beta: 0.01
