--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -1,5 +1,7 @@
-k_list: [1, 3]
+k_list: [3]
 splits: ["test"]
+paths:
+  predictions_dir: outputs/predictions
 metrics:
   - top1_accuracy
   - precision_at_k
