--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,12 @@ dependencies = [
   "scikit-learn>=1.3",
   "pyyaml>=6.0",
   "matplotlib>=3.7",
-  # Optional: enable if you add embedding baseline
-  # "sentence-transformers>=2.6",
-  # "torch>=2.2",
+]
+
+[project.optional-dependencies]
+embeddings = [
+  "sentence-transformers>=2.6",
+  "torch>=2.2",
 ]
 
 [tool.pytest.ini_options]
