Update model configurations and evaluation metrics
- Increased prediction parameter  from 2 to 3 in both embeddings and TF-IDF configurations.
- Enabled rules in both configurations to enhance recommendation logic.
- Updated evaluation metrics for embeddings and TF-IDF models to reflect improved performance.
- Removed obsolete scripts for model comparison and sample runs.

--- a/configs/tfidf.yaml
+++ b/configs/tfidf.yaml
@@ -3,7 +3,7 @@ k: 3
 model: tfidf
 
 recommend:
-  k_pred: 2
+  k_pred: 3
 
 paths:
   controls: data/raw/controls.csv
@@ -17,7 +17,7 @@ tfidf:
   min_df: 1
 
 rules:
-  enabled: false
+  enabled: true
 
 feedback:
   alpha: 0.03
