--- a/configs/embeddings.yaml
+++ b/configs/embeddings.yaml
@@ -3,7 +3,7 @@ k: 3
 model: embeddings
 
 recommend:
-  k_pred: 2
+  k_pred: 3
 
 paths:
   controls: data/raw/controls.csv
@@ -16,7 +16,7 @@ embeddings:
   model_name: sentence-transformers/all-MiniLM-L6-v2
 
 rules:
-  enabled: false
+  enabled: true
 
 feedback:
   alpha: 0.03
