--- a/configs/embeddings.yaml
+++ b/configs/embeddings.yaml
@@ -3,7 +3,20 @@ k: 3
 model: embeddings
 
 recommend:
-  k_pred: 3
+  candidate_k: 10        # expand pool before rules
+  top_n: 10              # max items stored if auto_k disabled
+  min_score: 0.00        # base threshold before auto-k (kept for compat)
+
+  auto_k:
+    enabled: true
+    min_k: 1             # never return fewer than this
+    max_k: 5             # cap to avoid spam
+    min_score: 0.15      # keep items above this absolute score
+    drop_ratio: 0.25     # "elbow": cut where (s[i-1]-s[i])/s[i-1] >= 0.25
+    per_type_max_k:      # optional tighter caps by evidence_type
+      log: 3
+      config: 2
+      ticket: 2
 
 paths:
   controls: data/raw/controls.csv
