--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 *.pyc
 *.pyo
 .venv/
+venv
 .env
 
 # Jupyter
@@ -11,3 +12,20 @@ __pycache__/
 
 # OS
 .DS_Store
+
+# Models (large files)
+*.npy
+*.pkl
+*.bin
+*.pt
+*.pth
+
+# Data outputs
+outputs/predictions/
+eval/tables/*.csv
+eval/tables/*.png
+
+# Virtual environment
+venv/
+.venv/
+refactor.ipynb
