Update .gitignore and add new evaluation data files
- Modified .gitignore to exclude model directories and specific output paths, streamlining the project structure.
- Added new CSV files for family metrics and general metrics, enhancing the evaluation capabilities of the project.
- Introduced a new predictions CSV file to support detailed analysis of model outputs, contributing to improved performance tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -19,11 +19,8 @@ venv
 *.bin
 *.pt
 *.pth
+models/*/
 
-# Data outputs
-outputs/predictions/
-eval/tables/*.csv
-eval/tables/*.png
 
 # Virtual environment
 venv/
